# file_server

./: README.md  pyproject.toml
app/: database.py  main.py  utils.py
app/models/: files_table.py
